--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -5,9 +5,9 @@
 >
 <body>
 <th:block layout:fragment="body">
-    <div>
-        index zzzzzz
-    </div>
+  <div>
+    index2
+  </div>
 </th:block>
 </body>
 </html>
