--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,23 +2,19 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/main.css" >
+    <link rel="stylesheet" href="/css/main.css">
     <title>Title</title>
 </head>
 <body>
 <header id="header">
-    <h1>예약쟁이</h1>
-    <p>예약을 한번 해봅시다.</p>
+    <h1>title</h1>
+    <p>text</p>
 </header>
 <form id="signup-form">
     <input type="text" class="sign-in" placeholder="ID">
     <input type="password" class="sign-in" placeholder="Password">
     <input type="button" id="login-btn" value="Login">
 </form>
-<footer id="footer">
-    <span>
-        texta
-    </span>
-</footer>
+<div id="bg"></div>
 </body>
 </html>
