회원가입화면 구성

--- a/src/main/resources/templates/common/nav.html
+++ b/src/main/resources/templates/common/nav.html
@@ -1,4 +1,5 @@
-<div class="tb-nav">
-    <a href="/index1">index1</a>
-    <a href="/index2">index2</a>
+<div class="header">
+    <div class="header-nav">
+        header bar
+    </div>
 </div>
