--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,24 +1,58 @@
 body {
     margin:0;
     padding:0;
-}
-.tb-container{
-    margin: 0 auto;
     width:100%;
     height:100vh;
-
+}
+.tb-container{
+    width:100%;
+    height:100vh;
     position: relative;
 }
 
-.tb-nav{
-    position: absolute;
-    left:0;
-    top:0;
-}
-
 .tb-content{
-    position: absolute;
-    left:300px;
-    top:0;
+    margin: 0 auto;
 }
 
+#header{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width:100%;
+}
+
+.header-nav{
+    position:absolute;
+    width: 100%;
+
+}
+
+.row-group{
+    overflow: hidden;
+    width:100%;
+    margin-top: 20px;
+}
+
+.choice{
+    font-size: 12px;
+    font-weight: 400;
+}
+
+#footer{
+    margin: 0 auto;
+    padding: 30px 0 15px 0;
+    text-align: center;
+}
+
+#bg{
+    transition: opacity 2s ease-in-out;
+    height: 100%;
+    left: 0;
+    opacity: 0.25;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    background-repeat: no-repeat;
+    background-size : cover;
+}
