메일인증, JS Module 생성, JS 정규식 생성

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,8 +9,8 @@
 <body>
 <div id="wrap">
     <header id="header">
-        <h1>저 푸른 초원위에</h1>
-        <p>그림같은 </p>
+        <h1>Groovy</h1>
+        <p>기록 저장소</p>
     </header>
     <form id="signup-form">
         <input type="text" class="sign-in" placeholder="ID">
@@ -23,5 +23,6 @@
         <span id="insert-btn">회원가입</span>
     </div>
 </div>
+<script src="/js/main.js" type="module"></script>
 </body>
 </html>
