--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -70,9 +70,9 @@ body > * {
     right: 0;
     color: rgba(255, 255, 255, 0.9);
     border: solid 1px rgba(0,0,0,.08);
-    background-color: #1cb495;
+    /*background-color: #1cb495;*/
+    background-color: #14836C;
     font-size: 15px;
-    cursor: pointer;
     padding: 13px 0;
     height: 51px;
     width: 115px;
@@ -134,6 +134,7 @@ body > * {
     padding-bottom: 20px;
     min-width: 240px;
     color: rgba(255,255,255,0.9);
+    cursor: pointer;
 }
 
 .tb-content{
@@ -154,9 +155,10 @@ body{
 }
 
 .error_next_box{
-    display: block;
     margin: 9px 0 -2px;
-    font-size: 12px;
+    font-size: 15px;
+    font-weight: bold;
     line-height: 14px;
     color: red;
+    background: rgba(255,255,255,0.1);
 }
