이메일 중복체크중

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -28,7 +28,7 @@
                             </label>
                         </h3>
                         <span class="int-area">
-                                <input type="text" placeholder="ID" id="id" name="id" class="int" maxlength="20">
+                                <input type="text" placeholder="ID" id="id" name="userId" class="int" maxlength="20">
                         </span>
                         <span class="error_next_box" id="idMsg"></span>
                     </div>
@@ -39,7 +39,7 @@
                             </label>
                         </h3>
                         <span class="int-area">
-                            <input type="password" placeholder="Password" id="pw" name="pw" class="int" maxlength="20">
+                            <input type="password" placeholder="Password" id="pw" name="userPw" class="int" maxlength="20">
                         </span>
                         <span class="error_next_box" id="pwMsg"></span>
                         <h3 class="join-title">
@@ -61,7 +61,7 @@
                             </label>
                         </h3>
                         <span class="int-area">
-                            <input type="text" placeholder="Name" id="name" name="name" class="int" maxlength="40">
+                            <input type="text" placeholder="Name" id="name" name="userName" class="int" maxlength="40">
                         </span>
                         <span class="error_next_box" id="nameMsg"></span>
                         <h3 class="join-title">
@@ -70,7 +70,7 @@
                             </label>
                         </h3>
                         <span class="int-area">
-                            <input type="text" placeholder="Nickname" id="nickname" name="nickname" class="int" maxlength="20">
+                            <input type="text" placeholder="Nickname" id="nickname" name="userNickname" class="int" maxlength="20">
                         </span>
                         <span class="error_next_box" id="nicknameMsg"></span>
                     </div>
@@ -81,7 +81,7 @@
                             </label>
                         </h3>
                         <span class="int-area">
-                            <input type="tel" placeholder="Phone" id="phone" name="phone" class="int" maxlength="13" autofocus>
+                            <input type="tel" placeholder="Phone" id="phone" name="userPhone" class="int" maxlength="13" autofocus>
                         </span>
                         <span class="error_next_box" id="phoneMsg"></span>
                     </div>
@@ -95,7 +95,7 @@
                         </h3>
                         <div class="mobile-area">
                             <span class="int-mobile">
-                                <input type="text" placeholder="Email" id="email" name="email" class="int" maxlength="100">
+                                <input type="text" placeholder="Email" id="email" name="userEmail" class="int" maxlength="100">
                             </span>
                             <button class="mobile-btn" id="check-email" disabled="disabled">
                                 인증번호 받기
