--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -95,11 +95,10 @@ body > * {
     font-size: 18px;
     font-weight: 700;
     text-align: center;
-    cursor: pointer;
     box-sizing: border-box;
     color: rgba(255, 255, 255, 0.9);
     border: solid 1px rgba(0,0,0,.08);
-    background-color: #1cb495;
+    background-color: #14836C;
     border-radius: 6px;
 }
 
