--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -18,101 +18,105 @@
             <h1 class="h-logo" id="logo">Title</h1>
         </div>
     </div>
-    <form id="join-form" style="width:100%;" method="post">
-            <div class="tb-content" style="max-width:460px;">
-                <div class="p-2 row-group">
-                    <div class="join-row">
-                        <h3 class="join-title">
-                            <label>
-                                아이디
-                            </label>
-                        </h3>
-                        <span class="int-area">
+    <div class="tb-content" style="max-width:460px;">
+        <div class="p-2 row-group">
+            <div class="join-row">
+                <h3 class="join-title">
+                    <label>
+                        아이디
+                    </label>
+                </h3>
+                <span class="int-area">
                                 <input type="text" placeholder="ID" id="id" name="userId" class="int" maxlength="20">
                         </span>
-                        <span class="error_next_box" id="idMsg"></span>
-                    </div>
-                    <div class="join-row">
-                        <h3 class="join-title">
-                            <label>
-                                비밀번호
-                            </label>
-                        </h3>
-                        <span class="int-area">
-                            <input type="password" placeholder="Password" id="pw" name="userPw" class="int" maxlength="20">
+                <span class="error_next_box" id="idMsg"></span>
+            </div>
+            <div class="join-row">
+                <h3 class="join-title">
+                    <label>
+                        비밀번호
+                    </label>
+                </h3>
+                <span class="int-area">
+                            <input type="password" placeholder="Password" id="pw" name="userPw" class="int"
+                                   maxlength="20">
                         </span>
-                        <span class="error_next_box" id="pwMsg"></span>
-                        <h3 class="join-title">
-                            <label>
-                                비밀번호 확인
-                            </label>
-                        </h3>
-                        <span class="int-area">
+                <span class="error_next_box" id="pwMsg"></span>
+                <h3 class="join-title">
+                    <label>
+                        비밀번호 확인
+                    </label>
+                </h3>
+                <span class="int-area">
                                 <input type="password" placeholder="Password" id="pw2" class="int" maxlength="20">
                         </span>
-                        <span class="error_next_box" id="pw2Msg"></span>
-                    </div>
-                </div>
-                <div class="p-2 row-group">
-                    <div class="join-row">
-                        <h3 class="join-title">
-                            <label>
-                                이름
-                            </label>
-                        </h3>
-                        <span class="int-area">
+                <span class="error_next_box" id="pw2Msg"></span>
+            </div>
+        </div>
+        <div class="p-2 row-group">
+            <div class="join-row">
+                <h3 class="join-title">
+                    <label>
+                        이름
+                    </label>
+                </h3>
+                <span class="int-area">
                             <input type="text" placeholder="Name" id="name" name="userName" class="int" maxlength="40">
                         </span>
-                        <span class="error_next_box" id="nameMsg"></span>
-                        <h3 class="join-title">
-                            <label>
-                                닉네임
-                            </label>
-                        </h3>
-                        <span class="int-area">
-                            <input type="text" placeholder="Nickname" id="nickname" name="userNickname" class="int" maxlength="20">
+                <span class="error_next_box" id="nameMsg"></span>
+                <h3 class="join-title">
+                    <label>
+                        닉네임
+                    </label>
+                </h3>
+                <span class="int-area">
+                            <input type="text" placeholder="Nickname" id="nickname" name="userNickname" class="int"
+                                   maxlength="20">
                         </span>
-                        <span class="error_next_box" id="nicknameMsg"></span>
-                    </div>
-                    <div class="join-row">
-                        <h3 class="join-title">
-                            <label>
-                                휴대전화<span class="choice">(선택)</span>
-                            </label>
-                        </h3>
-                        <span class="int-area">
-                            <input type="tel" placeholder="Phone" id="phone" name="userPhone" class="int" maxlength="13" autofocus>
-                        </span>
-                        <span class="error_next_box" id="phoneMsg"></span>
-                    </div>
-                </div>
-                <div class="p-2 row-group">
-                    <div class="join-row">
-                        <h3 class="join-title">
-                            <label>
-                                Email
-                            </label>
-                        </h3>
-                        <div class="mobile-area">
-                            <span class="int-mobile">
-                                <input type="text" placeholder="Email" id="email" name="userEmail" class="int" maxlength="100">
-                            </span>
-                            <button class="mobile-btn" id="check-email" disabled="disabled">
-                                인증번호 받기
-                            </button>
-                        </div>
-                        <span class="int-area" style="margin-top: 10px;">
-                            <input type="text" placeholder="인증번호" id="authNo" name="authNo" class="int" readonly="readonly">
-                        </span>
-                        <span class="error_next_box" id="EmailMsg"></span>
-                        <span class="error_next_box" id="authNoMsg"></span>
-                    </div>
-                </div>
-                <div class="p-2 btn-area">
-                    <input type="button" value="가입하기" class="join-btn">
-                </div>
+                <span class="error_next_box" id="nicknameMsg"></span>
             </div>
-    </form>
+            <div class="join-row">
+                <h3 class="join-title">
+                    <label>
+                        휴대전화<span class="choice">(선택)</span>
+                    </label>
+                </h3>
+                <span class="int-area">
+                            <input type="tel" placeholder="Phone" id="phone" name="userPhone" class="int" maxlength="13"
+                                   autofocus>
+                        </span>
+                <span class="error_next_box" id="phoneMsg"></span>
+            </div>
+        </div>
+        <div class="p-2 row-group">
+            <div class="join-row">
+                <h3 class="join-title">
+                    <label>
+                        Email
+                    </label>
+                </h3>
+                <div class="mobile-area">
+                            <span class="int-mobile">
+                                <input type="text" placeholder="Email" id="email" name="userEmail" class="int"
+                                       maxlength="100">
+                            </span>
+                    <button class="mobile-btn" id="check-email" disabled="disabled">
+                        인증번호 받기
+                    </button>
+                </div>
+                <span class="int-area" style="margin-top: 10px;">
+                            <input type="text" placeholder="인증번호" id="authNo" name="authNo" class="int"
+                                   readonly="readonly">
+                        </span>
+                <span class="error_next_box" id="EmailMsg"></span><br>
+                <span class="error_next_box" id="authNoMsg"></span>
+            </div>
+        </div>
+        <div class="p-2 btn-area">
+            <input type="button" value="가입하기" id="join-btn" class="join-btn" disabled="disabled">
+
+        </div>
+    </div>
     <th:block th:replace="common/footer"/>
 </div>
 <div id="bg"></div>
