회원가입 거의다함! 스크롤이벤트 만지작중

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="p-2 btn-area">
-            <input type="button" value="가입하기" id="join-btn" class="join-btn" disabled="disabled">
+            <input type="button" value="가입하기" id="join-btn" class="join-btn">
 
         </div>
     </div>
