회원가입 구현

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -82,8 +82,7 @@
                     </label>
                 </h3>
                 <span class="int-area">
-                            <input type="tel" placeholder="Phone" id="phone" name="userPhone" class="int" maxlength="13"
-                                   autofocus>
+                            <input type="tel" placeholder="Phone" id="phone" name="userPhone" class="int" maxlength="13">
                         </span>
                 <span class="error_next_box" id="phoneMsg"></span>
             </div>
@@ -113,7 +112,7 @@
             </div>
         </div>
         <div class="p-2 btn-area">
-            <input type="button" value="가입하기" id="join-btn" class="join-btn">
+            <input type="button" value="가입하기" id="join-btn" class="join-btn" disabled="disabled">
 
         </div>
     </div>
