--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -98,8 +98,9 @@ body > * {
     box-sizing: border-box;
     color: rgba(255, 255, 255, 0.9);
     border: solid 1px rgba(0,0,0,.08);
-    background-color: #1cb495;
+    background-color: #14836C;
     border-radius: 6px;
+    cursor: auto;
 }
 
 #header{
