--- a/src/main/resources/templates/common/base.html
+++ b/src/main/resources/templates/common/base.html
@@ -17,7 +17,8 @@
             <th:block layout:fragment="body"></th:block>
         </div>
     </div>
+    <th:block th:replace="common/footer"/>
 </div>
-<th:block th:replace="common/footer"/>
+<script src="dashboard.js" type="text/javascript"></script>
 </body>
 </html>
