--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -107,7 +107,7 @@
                             <input type="text" placeholder="인증번호" id="authNo" name="authNo" class="int"
                                    readonly="readonly">
                         </span>
-                <span class="error_next_box" id="EmailMsg"></span><br>
+                <span class="error_next_box" id="EmailMsg"></span>
                 <span class="error_next_box" id="authNoMsg"></span>
             </div>
         </div>
