--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,17 +1,17 @@
-body {
+html, body {
     margin:0;
     padding:0;
     width:100%;
-    height:100vh;
+    height:100%;
 }
 .tb-container{
     width:100%;
-    height:100vh;
     position: relative;
 }
 
 .tb-content{
     margin: 0 auto;
+    height:auto;
 }
 
 #header{
@@ -22,7 +22,7 @@ body {
 }
 
 .header-nav{
-    position:absolute;
+    position:relative;
     width: 100%;
 
 }
@@ -44,6 +44,13 @@ body {
     text-align: center;
 }
 
+#footer * {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    color: #333;
+}
+
 #bg{
     transition: opacity 2s ease-in-out;
     height: 100%;
@@ -56,3 +63,38 @@ body {
     background-repeat: no-repeat;
     background-size : cover;
 }
+
+.sidebar-sticky {
+    height: calc(100vh - 48px);
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.btn-logout{
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.btn-outline-logout {
+    border-color: #1cb495;
+    color: #1cb495;
+}
+
+.btn-logout:hover {
+     color: #ffffff;
+     background: #1cb495;
+ }
