--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -84,7 +84,7 @@ body > * {
 }
 
 .btn-area{
-    margin: 30px 0 9px;
+    margin: 9px 0 9px;
 }
 
 .join-btn{
@@ -137,10 +137,6 @@ body > * {
     cursor: pointer;
 }
 
-.tb-content{
-    height: 100vh;
-}
-
 label{
     cursor: pointer;
     color: rgba(255, 255, 255, 0.9);
@@ -161,4 +157,9 @@ body{
     line-height: 14px;
     color: red;
     background: rgba(255,255,255,0.1);
+    display: block;
+}
+
+#footer * {
+    color: rgba(255, 255, 255, 0.9);
 }
