--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -1,1 +1,6 @@
-<div id="footer">footer 입니다.</div>
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
+    <div class="col-md-4 d-flex align-items-center">
+        <i>ㅤ</i>
+        <span class="mb-3 mb-md-0 text-muted">© 2022 Groovy, Inc</span>
+    </div>
+</footer>
