캘린더, 리스트출력

--- a/src/main/resources/templates/common/base.html
+++ b/src/main/resources/templates/common/base.html
@@ -12,13 +12,12 @@
 <div class="tb-container">
     <th:block th:replace="common/nav"/>
     <div class="tb-content">
-        <th:block th:replace="common/top"/>
         <div class="content-body">
             <th:block layout:fragment="body"></th:block>
         </div>
     </div>
     <th:block th:replace="common/footer"/>
 </div>
-<script src="dashboard.js" type="text/javascript"></script>
+<script src="/js/calendar.js"></script>
 </body>
 </html>
