--- a/src/main/resources/static/css/calendar.css
+++ b/src/main/resources/static/css/calendar.css
@@ -133,3 +133,30 @@
     color: rebeccapurple;
     text-shadow: 1px 1px mediumpurple;
 }
+
+.plus-area{
+    display: inline;
+    float: right;
+    padding-right: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+    text-shadow: 1px 1px 2px grey;
+    color: white;
+}
+
+.schedule-date {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    word-break:break-all;
+    padding-left:10px;
+}
+
+.schedule:hover{
+    margin-top: 0px;
+    margin-left: 0px;
+    transform: scale(1.1,1.1);
+    -ms-transform: scale(1.1,1.1);
+    -webkit-transform: scale(1.1,1.1);
+    box-shadow: 0px 5px 5px -2px rgba(0, 0, 0, 0.25);
+}
