--- a/src/main/resources/static/css/calendar.css
+++ b/src/main/resources/static/css/calendar.css
@@ -146,7 +146,7 @@
 
 .schedule-date {
     overflow: hidden;
-    text-overflow: ellipsis;
+    /*text-overflow: ellipsis;*/
     white-space: nowrap;
     word-break:break-all;
     padding-left:10px;
@@ -163,7 +163,38 @@
 
 .schedule{
     cursor: pointer;
+    position: relative;
 }
 .schedule-content{
-    outline: none;
+   outline: rgba(48,106,154,0.7);
+    width: 300px;
+}
+
+.cursor-text{
+    cursor: text;
+}
+
+.delete-btn{
+    background: none;
+    border: none;
+    padding:0;
+    border-radius: 10px;
+}
+
+.delete-area{
+    position: absolute;
+    float: right;
+    right:0;
+    top:0;
+}
+
+.delete-btn:hover{
+    background: white;
+    transition: background-color 0.5s ease;
+    transform: scale(1.1,1.1);
+    -ms-transform: scale(1.1,1.1);
+    -webkit-transform: scale(1.1,1.1);
+}
+.delete-btn:active{
+    background-color: lightsalmon;
 }
