--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -78,6 +78,7 @@
 <!--    <div class="table-responsive">-->
 
 <!--    </div>-->
+    <script src="/js/calendar.js"></script>
   </main>
 </th:block>
 </body>
