--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -7,3 +7,4 @@
 <link href="/css/dashboard.css" rel="stylesheet">
 <link href="/css/calendar.css" rel="stylesheet">
 <link href="/css/schedule-modal.css" rel="stylesheet">
+<link href="/css/home.css" rel="stylesheet">
