--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -30,11 +30,12 @@
     padding: 10px 5px;
     border-radius: 10px;
     height: 50px;
-    width: 550px;
+    width: 500px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     word-break: break-all;
+    outline:none;
 }
 .td-schedule:hover{
     overflow-y: scroll;
@@ -51,4 +52,65 @@
     font-weight: bold;
     text-align: end;
     margin: 5px 0;
+}
+
+.today-insert{
+    float:right;
+    display: flex;
+    margin: 10px;
+    cursor: pointer;
+    width:18px;
+    height:18px;
+}
+
+.today-btn {
+    all:unset;
+    border-radius: 5px;
+    background-color: slateblue;
+    cursor: pointer;
+    color:white;
+    width: 40px;
+    height: 30px;
+    text-align: center;
+    margin: 10px;
+    z-index: 100;
+}
+
+.f-cen{
+    display: flex;
+    flex-wrap : wrap;
+    justify-content: center;
+}
+.today-btn:hover{
+    transition: ease-in-out .1s;
+    opacity: 0.8;
+}
+
+.flex{
+    display: flex;
+}
+
+.today-delete{
+    display: flex;
+    background-color: white;
+    border: none;
+    border-radius: 10px;
+    width: 30px;
+    height: 30px;
+    justify-content: center;
+    margin: auto 5px;
+    outline: none;
+}
+.today-delete:hover{
+    transition: ease-in-out .1s;
+    transform: scale(1.3);
+}
+
+.red {
+    color:red;
+}
+
+#weather {
+    width: 150px;
+    cursor: pointer;
 }
