--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -39,11 +39,17 @@
                 <span id="weathers"></span>
                 <span id="temp"></span>
             </div>
-            <h3 id="clock"></h3>
-            <h4 class="my-4">Today Schedule</h4>
-            <div class="p-2" style="width: 600px">
+            <h3 class="my-2" id="clock"></h3>
+            <h4 class="my-2">Today Schedule</h4>
+            <div class="p-2" style="width: 600px;">
+                <div class="today-insert">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                    </svg>
+                </div>
                 <div id="today-count"></div>
-                <div id="today-schedule">
+                <div id="today-schedule" class="my-1">
                 </div>
             </div>
         </div>
