--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -111,6 +111,39 @@
 }
 
 #weather {
-    width: 150px;
     cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    color: #333333;
+    border-radius: 10px;
+    background: lightyellow;
+}
+
+#today-weather{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
+    position: absolute;
+    right:30px;
+}
+
+#clock{
+    position: absolute;
+    right:24px;
+    font-size: 36px;
+    font-weight: bold;
+    color: #333333;
+    top:60px;
+}
+
+.home{
+    border: 1px solid #dddddd;
+    border-radius: 10px;
+}
+
+#weather-title{
+    font-weight: bold;
+    margin-bottom: 20px;
 }
