--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -3,6 +3,9 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{common/base}"
 >
+<th:block layout:fragment="head">
+  <title>Calendar</title>
+</th:block>
 <body>
 <th:block layout:fragment="body">
   <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar" style="margin-top: 32px; width:180px!important;">
