--- a/src/main/resources/templates/common/base.html
+++ b/src/main/resources/templates/common/base.html
@@ -6,7 +6,7 @@
 >
 <head>
     <th:block th:replace="common/header"/>
-    <title>타이틀</title>
+    <th:block layout:fragment="head"></th:block>
 </head>
 <body>
 <div class="tb-container">
