--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -119,31 +119,39 @@
     background: lightyellow;
 }
 
-#today-weather{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    position: absolute;
-    right:30px;
+@media (min-width: 1185px) {
+    #today-weather{
+        display: flex!important;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 8px;
+        position: absolute;
+        right: 30px;
+    }
+}
+
+#today-weather {
+    display: none;
+}
+
+@media (min-width: 1185px) {
+    #clock {
+        display: flex!important;
+        position: absolute;
+        right: 24px;
+        font-size: 36px;
+        font-weight: bold;
+        color: #333333;
+        top: 60px;
+    }
 }
 
 #clock{
-    position: absolute;
-    right:24px;
-    font-size: 36px;
-    font-weight: bold;
-    color: #333333;
-    top:60px;
-}
-
-.home{
-    border: 1px solid #dddddd;
-    border-radius: 10px;
+    display: none;
 }
 
 #weather-title{
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
