월별 스케줄 건수 차트로 구현

--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -39,6 +39,7 @@
     <h2 style="padding-top: 36px; font-weight: bold">Reports</h2>
     <div class="my-4 p-2">
       <canvas id="report"></canvas>
+      <div id="pyo"></div>
     </div>
   </main>
   <script src="/js/report.js"></script>
