--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -15,7 +15,7 @@
 <div class="tb-container">
     <div id="header">
         <div class="header-logo">
-            <h1 class="h-logo" id="logo">Title</h1>
+            <h1 class="h-logo" id="logo">Groovy</h1>
         </div>
     </div>
     <div class="tb-content" style="max-width:460px;">
