--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -37,10 +37,11 @@
   <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4" style="margin: 50px 0 0 203px!important;position:relative; padding-top: 36px!important;">
     <h2 style="padding-top: 36px; font-weight: bold">ProFile</h2>
     <div class="my-4 w-100 profile p-2">
-
+      <table id="tb-profile">
+      </table>
     </div>
   </main>
-  <script src="/js/profile.js"></script>
+  <script src="/js/profile.js" type="module"></script>
 </th:block>
 </body>
 </html>
