--- a/src/main/resources/templates/common/nav.html
+++ b/src/main/resources/templates/common/nav.html
@@ -5,7 +5,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" id="home" href="/groovy/home">Home</a>
+                        <a class="nav-link" aria-current="page" id="home" href="/groovy/home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="profile" href="/groovy/profile">Profile</a>
@@ -14,7 +14,7 @@
                         <input type="hidden" id="session-id" class="nav-link disable" name="userId" th:value="${session.id}" style="color:black">
                     </li>
                 </ul>
-                    <button class="btn-logout btn-outline-logout" type="button">LogOut</button>
+                    <button class="btn-logout btn-outline-logout" type="button" th:if="${session.id}">LogOut</button>
             </div>
         </div>
     </nav>
