--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -6,7 +6,8 @@
 <body>
 <th:block layout:fragment="body">
   <div>
-    index2
+      <input type="tel" style="position: relative; top:500px; left:500px">
+      <input type="tel" placeholder="Phone" id="phone" name="userPhone" class="int" maxlength="13" style="position: relative; top:500px; left:500px">
   </div>
 </th:block>
 </body>
