--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -4,6 +4,7 @@
       layout:decorate="~{common/base}"
 >
 <th:block layout:fragment="head">
+  <link rel="stylesheet" href="/css/profile.css">
   <title>ProFile</title>
 </th:block>
 <body>
@@ -39,8 +40,22 @@
     <div class="my-4 w-100 profile p-2">
       <table id="tb-profile">
       </table>
+      <div class="profile-btns"></div>
     </div>
   </main>
+  <div id="modal" class="modal-overlay" style="background: rgba(0, 0, 0, 0.5)!important;">
+    <div class="modal-window" style="background: rgba( 255,255, 255, 1 )!important; ">
+      <div class="close-area" style="color:black!important;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+      </svg></div>
+      <div class="p-4" id="value-area">
+        <h4 id="update-title"></h4>
+        <span id="now-text"></span>
+        <div id="update-val"></div>
+      </div>
+    </div>
+  </div>
   <script src="/js/profile.js" type="module"></script>
 </th:block>
 </body>
