--- a/src/main/resources/templates/mail.html
+++ b/src/main/resources/templates/mail.html
@@ -12,7 +12,7 @@
 
   <div style="border:1px solid black; font-family:verdana; padding:20px 20px 40px 20px; width:760px">
     <h2 style="color:blue"> 회원가입 인증번호 입니다. </h2>
-    성민님, 안녕하세요.
+    회원님, 안녕하세요.
     <br>
     귀하의 이메일 주소를 통해 <span style="color:green">Groovy</span> 회원가입 인증 계정 <span style="color:blue" th:text="${email}"></span>에 대한 액세스가 요청되었습니다.
     <br>
