--- a/src/main/resources/templates/changeMail.html
+++ b/src/main/resources/templates/changeMail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
   <meta charset="UTF-8">
 </head>
@@ -12,7 +13,7 @@
 
   <div style="border:1px solid black; font-family:verdana; padding:20px 20px 40px 20px; width:760px">
     <h2 style="color:blue"> 이메일 변경 인증번호 입니다. </h2>
-    성민님, 안녕하세요.
+    <span th:text="${session + '님'}"></span>, 안녕하세요.
     <br>
     귀하의 이메일 주소를 통해 <span style="color:green">Groovy</span> 이메일 변경 인증 계정 <span style="color:blue" th:text="${email}"></span>에 대한 액세스가 요청되었습니다.
     <br>
