--- a/src/main/resources/templates/common/base.html
+++ b/src/main/resources/templates/common/base.html
@@ -18,6 +18,7 @@
     </div>
     <th:block th:replace="common/footer"/>
 </div>
+<script src="/js/logout.js"></script>
 </body>
 <body th:unless="${session.id}">
     <h1><a href="/groovy">로그인</a>을 해주세요</h1>
