아이디 비밀번호찾기, 비밀번호수정, profile 수정 구현

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -128,3 +128,12 @@ input{
 #wrap{
     margin: 0 16px;
 }
+
+#find-area{
+    margin-top:10px;
+}
+
+#find-id, #find-pw{
+    cursor:pointer;
+    margin-left: 10px;
+}
