--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,7 @@
         <input type="password" class="sign-in" placeholder="Password" id="userPw">
         <input type="button" id="login-btn" value="Login">
     </div>
+    <div id="find-area"><span id="find-id">아이디찾기</span><span id="find-pw">비밀번호찾기</span></div>
 </div>
 <div id="bg">
     <div id="insert">
