--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -38,9 +38,8 @@
   <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4" style="margin: 50px 0 0 203px!important;position:relative; padding-top: 36px!important;">
     <h2 style="padding-top: 36px; font-weight: bold">ProFile</h2>
     <div class="my-4 w-100 profile p-2">
-      <table id="tb-profile">
-      </table>
-      <div class="profile-btns"></div>
+      <table id="tb-profile"></table>
+      <div id="profile-btns"></div>
     </div>
   </main>
   <div id="modal" class="modal-overlay" style="background: rgba(0, 0, 0, 0.5)!important;">
