--- a/src/main/resources/static/css/schedule-modal.css
+++ b/src/main/resources/static/css/schedule-modal.css
@@ -24,7 +24,7 @@
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
     width: 400px;
-    height: 500px;
+    height: auto;
     position: relative;
     /*top: -250px;*/
     padding: 10px;
